--- a/memoria/tex/lista-abreviaturas.tex
+++ b/memoria/tex/lista-abreviaturas.tex
@@ -4,6 +4,7 @@
 \item API: Application Programming Interface (Interfaz de Programación de Aplicaciones)
 \item CPU: Central Processing Unit (Unidad Central de Procesamiento)
 \item GPU: Graphics Processing Unit (Unidad de Procesamiento Gráfico)
+\item MIL: Modelo de Iluminación Local
 \item SDF: Signed Distance Function
 \item SFI: Sistema de Funciones Iteradas
 \item RT: Ray-Tracing
